# route53-ddns

./: .coveragerc  .travis.yml  DEVELOPMENT.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: coverage.yaml
src/route53_ddns/: cli.py  ip_utilities.py  route53_interface.py
test/: test_ip_utilities.py  test_route53_interface.py
