[options]
install_requires =
    click
    boto3
    requests
    tenacity

[options.extras_require]
test =
    black
    isort
    mypy
    pytest
    pytest-cov
    coveralls

[options.entry_points]
console_scripts =
    route53-ddns = route53_ddns.cli:route53_ddns

[mypy]
check_untyped_defs = True
show_error_codes = True
pretty = True
ignore_missing_imports = True

[build_sphinx]
warning-is-error = 1

[coverage:paths]
source =
    src/
