[options]
install_requires =
    click
    boto3
    requests
    tenacity

[options.extras_require]
test =
    black
    isort
    mypy
    flake8
    pytest
    pytest-cov
    types-requests
    coveralls

[options.entry_points]
console_scripts =
    route53-ddns = route53_ddns.cli:route53_ddns

[build_sphinx]
warning-is-error = 1

[coverage:paths]
source =
    src/

[flake8]
max-line-length = 120
